--- a/DeviceConfig/Router1.config
+++ b/DeviceConfig/Router1.config
@@ -2,154 +2,29 @@
 !
 ! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
 !
-version 16.9
-service timestamps debug datetime msec
-service timestamps log datetime msec
-platform qfp utilization monitor load 80
-platform punt-keepalive disable-kernel-core
-!
 hostname Router1
-!
-boot-start-marker
-boot-end-marker
-!
-!
-vrf definition Mgmt-intf
- !
- address-family ipv4
- exit-address-family
- !
- address-family ipv6
- exit-address-family
-!
-!
-no aaa new-model
-!
-!
-!
-!
-!
-!
-!
-!
-!
-!
-login on-success log
-!
-!
-!
-!
-!
-!
-!
-subscriber templating
-! 
-! 
-! 
-! 
-vtp domain cisco
-vtp mode transparent
-multilink bundle-name authenticated
-!
-!
-!
-!
-crypto pki trustpoint TP-self-signed-2189345785
- enrollment selfsigned
- subject-name cn=IOS-Self-Signed-Certificate-2189345785
- revocation-check none
- rsakeypair TP-self-signed-2189345785
-!
-!
-!
-license udi pid ISR4321/K9 sn FDO21482DXE
-license boot level appxk9
-no license smart enable
-diagnostic bootup level minimal
-!
-spanning-tree extend system-id
-!
-!
-!
-!
-redundancy
- mode none
-!
-!
-!
-!
-!
-!
-!
-! 
-! 
-!
-!
-interface GigabitEthernet0/0/0
- no ip address
- shutdown
- negotiation auto
-!
-interface GigabitEthernet0/0/1
- no ip address
- shutdown
- negotiation auto
 !
 interface Serial0/1/0
  ip address 10.0.0.5 255.255.255.252
  clock rate 8000000
+ no shut
 !
 interface Serial0/1/1
  ip address 10.0.0.1 255.255.255.252
  clock rate 8000000
-!
-interface GigabitEthernet0/2/0
- no ip address
- shutdown
- negotiation auto
-!
-interface GigabitEthernet0/2/1
- no ip address
- shutdown
- negotiation auto
-!
-interface GigabitEthernet0
- vrf forwarding Mgmt-intf
- no ip address
- shutdown
- negotiation auto
+ no shut
 !
 router ospf 1
  router-id 1.1.1.1
  network 10.0.0.0 0.0.0.3 area 1
  network 10.0.0.5 0.0.0.3 area 0
 !
-ip forward-protocol nd
-ip http server
-ip http authentication local
-ip http secure-server
-ip tftp source-interface GigabitEthernet0
-!
-!
-!
-!
-!
-!
-control-plane
-!
-!
+! Ease of use configuration changes, does not affect OSPF lab
+no ip domain lookup
 line con 0
  logging synchronous
  transport input none
  stopbits 1
-line aux 0
- stopbits 1
-line vty 0 4
- login
-!
-!
-!
-!
 !
 !
 end
