--- a/DeviceConfig/Router3.config
+++ b/DeviceConfig/Router3.config
@@ -1,123 +1,28 @@
 
 !
-! Last configuration change at 17:00:47 UTC Fri Sep 13 2024
-!
-version 16.9
-service timestamps debug datetime msec
-service timestamps log datetime msec
-platform qfp utilization monitor load 80
-platform punt-keepalive disable-kernel-core
+! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
 !
 hostname Router3
 !
-boot-start-marker
-boot-end-marker
-!
-!
-vrf definition Mgmt-intf
- !
- address-family ipv4
- exit-address-family
- !
- address-family ipv6
- exit-address-family
-!
-!
-no aaa new-model
-!
-!
-!
-!
-login on-success log
-!
-!
-!
-!
-!
-!
-!
-subscriber templating
-vtp domain cisco
-vtp mode transparent
-multilink bundle-name authenticated
-!
-!
-!
-!
-spanning-tree extend system-id
-!
-!
-!
-!
-redundancy
- mode none
-!
-!
-!
-!
-!
-!
-!
+interface Serial0/1/0
+ ip address 30.0.0.1 255.255.255.252
+ no shut
 !
 interface Loopback0
  ip address 10.1.1.1 255.255.255.0
-!
-interface GigabitEthernet0/0/0
- no ip address
- shutdown
- negotiation auto
-!
-interface GigabitEthernet0/0/1
- no ip address
- shutdown
- negotiation auto
-!
-interface Serial0/1/0
- ip address 30.0.0.1 255.255.255.252
- clock rate 8000000
-!
-interface Serial0/1/1
- no ip address
- shutdown
- clock rate 8000000
-!
-interface GigabitEthernet0
- vrf forwarding Mgmt-intf
- no ip address
- shutdown
- negotiation auto
+ no shut
 !
 router ospf 1
  router-id 3.3.3.3
- network 10.1.1.0 0.0.0.255 area 1
- network 30.0.0.0 0.0.0.3 area 1
+ network 10.1.1.1 0.0.0.255 area 1
+ network 30.0.0.1 0.0.0.3 area 1
 !
-ip forward-protocol nd
-ip http server
-ip http authentication local
-ip http secure-server
-ip tftp source-interface GigabitEthernet0
-!
-!
-!
-!
-!
-!
-control-plane
-!
-!
+! Ease of use configuration changes, does not affect OSPF lab
+no ip domain lookup
 line con 0
  logging synchronous
  transport input none
  stopbits 1
-line aux 0
- stopbits 1
-line vty 0 4
- login
-!
-!
-!
-!
 !
 !
 end
