hopefully ipv6 works

--- a/DeviceConfig/Router1.config
+++ b/DeviceConfig/Router1.config
@@ -4,13 +4,24 @@
 !
 hostname Router1
 !
+!ipv6 info 
+ipv6 unicast-routing
+ipv6 router ospf 1
+ router-id 1.1.1.1
+!
 interface Serial0/1/0
  ip address 10.0.0.5 255.255.255.252
+ ipv6 address 2001:db8:1:0::5/64
+ ipv6 enable
+ ipv6 ospf 1 area 0
  clock rate 8000000
  no shut
 !
 interface Serial0/1/1
  ip address 10.0.0.1 255.255.255.252
+ ipv6 address 2001:db8::1/64
+ ipv6 enable
+ ipv6 ospf 1 area 1
  clock rate 8000000
  no shut
 !
@@ -26,5 +37,5 @@ line con 0
  transport input none
  stopbits 1
 !
-!
+
 end
