--- a/DeviceConfig/Router2.config
+++ b/DeviceConfig/Router2.config
@@ -4,18 +4,29 @@
 !
 hostname Router2
 !
+!ipv6 info 
+ipv6 unicast-routing
+ipv6 router ospf 1
+ router-id 2.2.2.2
+!
 interface Serial0/1/0
  ip address 10.0.0.6 255.255.255.252
+ ipv6 address 2001:db8:1:0::6/64
+ ipv6 enable
+ ipv6 ospf 1 area 0
  no shut
 !
 interface GigabitEthernet0/0/1
  ip address 10.0.0.9 255.255.255.252
+ ipv6 address 2001:db8:2:0::9/64
+ ipv6 enable
+ ipv6 ospf 1 area 2
  no shut
 !
 router ospf 1
  router-id 2.2.2.2
  network 10.0.0.6 0.0.0.3 area 0
- network 10.0.0.9 0.0.0.3 area 1
+ network 10.0.0.9 0.0.0.3 area 2
 !
 ! Ease of use configuration changes, does not affect OSPF lab
 no ip domain lookup
@@ -23,6 +34,7 @@ line con 0
  logging synchronous
  transport input none
  stopbits 1
+!
 !
 !
 end
