--- a/DeviceConfig/Router3.config
+++ b/DeviceConfig/Router3.config
@@ -4,12 +4,22 @@
 !
 hostname Router3
 !
+ipv6 unicast-routing
+ipv6 router ospf 1
+ router-id 3.3.3.3
+!
 interface Serial0/1/0
  ip address 30.0.0.1 255.255.255.252
+ ipv6 address 2001:db8:3:0::1/64
+ ipv6 enable
+ ipv6 ospf 1 area 1
  no shut
 !
 interface Loopback0
  ip address 10.1.1.1 255.255.255.0
+ ipv6 address 2001:db8:1:1::1/64 
+ ipv6 enable
+ ipv6 ospf 1 area 1
  no shut
 !
 router ospf 1
