--- a/DeviceConfig/Router4.config
+++ b/DeviceConfig/Router4.config
@@ -4,12 +4,22 @@
 !
 hostname Router4
 !
+ipv6 unicast-routing
+ipv6 router ospf 1
+ router-id 4.4.4.4
+!
 interface Serial0/1/0
  ip address 30.0.0.2 255.255.255.252
+ ipv6 address 2001:db8:3:0::2/64
+ ipv6 enable
+ ipv6 ospf 1 area 1
  no shut
 !
 interface Serial0/1/1
  ip address 10.0.0.2 255.255.255.252
+ ipv6 address 2001:db8:0:0::2/64
+ ipv6 enable
+ ipv6 ospf 1 area 1
  no shut
 !
 router ospf 1
