--- a/DeviceConfig/Layer3Switch1.config
+++ b/DeviceConfig/Layer3Switch1.config
@@ -1,28 +1,184 @@
-! Configuration for the layer 3 switch
+
+!
+version 12.2
+no service pad
+service timestamps debug uptime
+service timestamps log uptime
+no service password-encryption
+!
 hostname Layer3Switch
 !
-!Enable layer 3 capabilities
+boot-start-marker
+boot-end-marker
+!
+!
+!
+!
+no aaa new-model
+system mtu routing 1500
 ip routing
 !
-! Disable switchport to make interface layer 3
+!
+ipv6 unicast-routing
+!
+!
+!
+!
+!
+!
+spanning-tree mode pvst
+spanning-tree extend system-id
+!
+vlan internal allocation policy ascending
+!
+!
+!
+!
 interface FastEthernet0/1
+!
+interface FastEthernet0/2
+!
+interface FastEthernet0/3
  no switchport
  ip address 10.0.0.10 255.255.255.252
-!
+ ipv6 address 2001:DB8:2::10/64
+ ipv6 enable
+ ipv6 ospf 1 area 2
 !
 interface FastEthernet0/4
  no switchport
  ip address 20.0.0.2 255.255.255.252
+ ipv6 address 2001:DB8:20::2/64
+ ipv6 enable
+ ipv6 ospf 1 area 2
 !
-! Set up ospf
+interface FastEthernet0/5
+!
+interface FastEthernet0/6
+!
+interface FastEthernet0/7
+!
+interface FastEthernet0/8
+!
+interface FastEthernet0/9
+!
+interface FastEthernet0/10
+!
+interface FastEthernet0/11
+!
+interface FastEthernet0/12
+!
+interface FastEthernet0/13
+!
+interface FastEthernet0/14
+!
+interface FastEthernet0/15
+!
+interface FastEthernet0/16
+!
+interface FastEthernet0/17
+!
+interface FastEthernet0/18
+!
+interface FastEthernet0/19
+!
+interface FastEthernet0/20
+!
+interface FastEthernet0/21
+!
+interface FastEthernet0/22
+!
+interface FastEthernet0/23
+!
+interface FastEthernet0/24
+!
+interface FastEthernet0/25
+!
+interface FastEthernet0/26
+!
+interface FastEthernet0/27
+!
+interface FastEthernet0/28
+!
+interface FastEthernet0/29
+!
+interface FastEthernet0/30
+!
+interface FastEthernet0/31
+!
+interface FastEthernet0/32
+!
+interface FastEthernet0/33
+!
+interface FastEthernet0/34
+!
+interface FastEthernet0/35
+!
+interface FastEthernet0/36
+!
+interface FastEthernet0/37
+!
+interface FastEthernet0/38
+!
+interface FastEthernet0/39
+!
+interface FastEthernet0/40
+!
+interface FastEthernet0/41
+!
+interface FastEthernet0/42
+!
+interface FastEthernet0/43
+!
+interface FastEthernet0/44
+!
+interface FastEthernet0/45
+!
+interface FastEthernet0/46
+!
+interface FastEthernet0/47
+!
+interface FastEthernet0/48
+!
+interface GigabitEthernet0/1
+!
+interface GigabitEthernet0/2
+!
+interface GigabitEthernet0/3
+!
+interface GigabitEthernet0/4
+!
+interface Vlan1
+ no ip address
+!
 router ospf 1
  router-id 6.6.6.6
  log-adjacency-changes
  network 10.0.0.8 0.0.0.3 area 2
  network 20.0.0.0 0.0.0.3 area 2
 !
-! Ease of use
+ip classless
+ip http server
+ip http secure-server
+!
+!
+ipv6 router ospf 1
+ router-id 6.6.6.6
+ log-adjacency-changes
+!
+ipv6 router ospf 12
+ log-adjacency-changes
+!
+!
+!
+!
+!
 line con 0
  logging synchronous
+line vty 0 4
+ login
+line vty 5 15
+ login
 !
 end
+
