--- a/DeviceConfig/Router1.config
+++ b/DeviceConfig/Router1.config
@@ -1,19 +1,18 @@
-
 !
-! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
+! Configuration (c) Elijah Stuenkel, CNNA, 2024
 !
+! Setting the device hostname
 hostname Router1
 !
-!ipv6 info 
+! Enable dual stack IPv4 and IPv6
 ipv6 unicast-routing
-ipv6 router ospf 1
- router-id 1.1.1.1
 !
 interface Serial0/1/0
  ip address 10.0.0.5 255.255.255.252
  ipv6 address 2001:db8:1:0::5/64
- ipv6 enable
+ ! Serial connecting between backbone routers, area is set to 0
  ipv6 ospf 1 area 0
+ ! Interface is DCE side of serial
  clock rate 8000000
  no shut
 !
@@ -21,21 +20,25 @@ interface Serial0/1/1
  ip address 10.0.0.1 255.255.255.252
  ipv6 address 2001:db8::1/64
  ipv6 enable
+ ! Serial connecting OSPF backbone to area 1
  ipv6 ospf 1 area 1
+ ! Interface is DCE side of serial
  clock rate 8000000
  no shut
 !
+! IPv4 OSPF configuration 
 router ospf 1
  router-id 1.1.1.1
  network 10.0.0.0 0.0.0.3 area 1
  network 10.0.0.5 0.0.0.3 area 0
 !
-! Ease of use configuration changes, does not affect OSPF lab
+! IPv6 ospf configuration, networks enabled per interface
+ipv6 router ospf 1
+ router-id 1.1.1.1
+! 
+! Enable synchronous logging to prevent debug messages from messing with commands
 no ip domain lookup
 line con 0
  logging synchronous
- transport input none
- stopbits 1
 !
-
 end
