--- a/DeviceConfig/Router3.config
+++ b/DeviceConfig/Router3.config
@@ -1,38 +1,41 @@
-
 !
-! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
+! Configuration (c) Elijah Stuenkel, CNNA, 2024
 !
+! Setting the device hostname
 hostname Router3
 !
+! Enable dual stack IPv4 and IPv6
 ipv6 unicast-routing
-ipv6 router ospf 1
- router-id 3.3.3.3
 !
 interface Serial0/1/0
  ip address 30.0.0.1 255.255.255.252
  ipv6 address 2001:db8:3:0::1/64
- ipv6 enable
+ ! Serial connecting inside area 1
  ipv6 ospf 1 area 1
+ ! Interface is DTE, no serial baud rate is set
  no shut
 !
+! Loopack interface repersenting a host edge edvice
 interface Loopback0
  ip address 10.1.1.1 255.255.255.0
  ipv6 address 2001:db8:1:1::1/64 
- ipv6 enable
+ ! Internal to area 1
  ipv6 ospf 1 area 1
  no shut
 !
+! IPv4 OSPF configuration
 router ospf 1
  router-id 3.3.3.3
  network 10.1.1.1 0.0.0.255 area 1
  network 30.0.0.1 0.0.0.3 area 1
 !
-! Ease of use configuration changes, does not affect OSPF lab
+! IPv6 OSPF configuration, networks enabled per interface
+ipv6 router ospf 1
+ router-id 3.3.3.3
+!
+! Enable synchronous logging to prevent debug messages from messing with commands
 no ip domain lookup
 line con 0
  logging synchronous
- transport input none
- stopbits 1
-!
 !
 end
