--- a/DeviceConfig/Router2.config
+++ b/DeviceConfig/Router2.config
@@ -1,40 +1,41 @@
-
 !
-! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
+! Configuration (c) Elijah Stuenkel, CNNA, 2024
 !
+! Setting the device hostname
 hostname Router2
 !
-!ipv6 info 
+! Enable dual stack IPv4 and IPv6
 ipv6 unicast-routing
-ipv6 router ospf 1
- router-id 2.2.2.2
 !
 interface Serial0/1/0
  ip address 10.0.0.6 255.255.255.252
  ipv6 address 2001:db8:1:0::6/64
- ipv6 enable
+ ! Serial connecting between backbone routers, area is set to 0
  ipv6 ospf 1 area 0
+ ! Interface is DTE, no serial baud rate is required
  no shut
 !
+! Connection to Layer 3 Switch is done over Ethernet
 interface GigabitEthernet0/0/1
  ip address 10.0.0.9 255.255.255.252
  ipv6 address 2001:db8:2:0::9/64
- ipv6 enable
+ ! Serial connecting OSPF backbone to area 2
  ipv6 ospf 1 area 2
  no shut
 !
+! IPv4 OSPF configuration
 router ospf 1
  router-id 2.2.2.2
  network 10.0.0.6 0.0.0.3 area 0
  network 10.0.0.9 0.0.0.3 area 2
 !
-! Ease of use configuration changes, does not affect OSPF lab
+! IPv6 OSPF configuration, networks enabled per interface
+ipv6 router ospf 1
+ router-id 2.2.2.2
+!
+! Enable synchronous logging to prevent debug messages from messing with commands
 no ip domain lookup
 line con 0
  logging synchronous
- transport input none
- stopbits 1
-!
-!
 !
 end
