--- a/DeviceConfig/Router4.config
+++ b/DeviceConfig/Router4.config
@@ -1,38 +1,43 @@
 
 !
-! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
+! Configuration (c) Elijah Stuenkel, CNNA, 2024
 !
+! Setting the device hostname
 hostname Router4
 !
+! Enable dual stack IPv4 and IPv6
 ipv6 unicast-routing
-ipv6 router ospf 1
- router-id 4.4.4.4
 !
 interface Serial0/1/0
  ip address 30.0.0.2 255.255.255.252
  ipv6 address 2001:db8:3:0::2/64
- ipv6 enable
+ ! Serial connecting to internal to area, area 1
  ipv6 ospf 1 area 1
+ ! Interface is DTE, no serial baud rate is set
  no shut
 !
+!  
 interface Serial0/1/1
  ip address 10.0.0.2 255.255.255.252
  ipv6 address 2001:db8:0:0::2/64
- ipv6 enable
+ ! Serial connecting to backbone, area 1
  ipv6 ospf 1 area 1
+ ! Interface is DTE, no serial baud rate is set
  no shut
 !
+! IPv4 OSPF configuration
 router ospf 1
  router-id 4.4.4.4
  network 10.0.0.2 0.0.0.3 area 1
  network 30.0.0.2 0.0.0.3 area 1
 !
-! Ease of use configuration changes, does not affect OSPF lab
+! IPv6 OSPF configuration, networks enabled per interface
+ipv6 router ospf 1
+ router-id 4.4.4.4
+!
+! Enable synchronous logging to prevent debug messages from messing with commands
 no ip domain lookup
 line con 0
  logging synchronous
- transport input none
- stopbits 1
-!
 !
 end
