--- a/DeviceConfig/Router5.config
+++ b/DeviceConfig/Router5.config
@@ -1,38 +1,42 @@
 
 !
-! Last configuration change at 16:28:03 UTC Fri Sep 13 2024
+! Configuration (c) Elijah Stuenkel, CNNA, 2024
 !
+! Setting the device hostname
 hostname Router5
 !
+! Enable dual stack IPv4 and IPv6
 ipv6 unicast-routing
-ipv6 router ospf 1
- router-id 5.5.5.5
 !
+! Connection to Layer 3 Switch is made over Ethernet
 interface GigabitEthernet0/0/1
  ip address 20.0.0.1 255.255.255.252
  ipv6 address 2001:db8:20:0::1/64
- ipv6 enable
+ ! Connection is internal to area 2, area set to 2
  ipv6 ospf 1 area 2
  no shut
 !
+! Loopack interface repersenting a host edge edvice
 interface Loopback0
  ip address 10.2.2.2 255.255.255.0
  ipv6 address 2001:db8:2:2::2/64
- ipv6 enable
+ ! Internal to area 2
  ipv6 ospf 1 area 2
  no shut
 !
+! IPv4 OSPF configuration
 router ospf 1
  router-id 5.5.5.5
  network 20.0.0.1 0.0.0.3 area 2
  network 10.2.2.2 0.0.0.255 area 2
 !
-! Ease of use configuration changes, does not affect OSPF lab
+! IPv6 OSPF configuration, networks enabled per interface
+ipv6 router ospf 1
+ router-id 5.5.5.5
+! 
+! Enable synchronous logging to prevent debug messages from messing with commands
 no ip domain lookup
 line con 0
  logging synchronous
- transport input none
- stopbits 1
-!
 !
 end
