--- a/DeviceConfig/Router5.config
+++ b/DeviceConfig/Router5.config
@@ -1,6 +1,6 @@
 
 !
-! Configuration (c) Elijah Stuenkel, CNNA, 2024
+! Configuration (c) Elijah Stuenkel, CCNA, 2024
 !
 ! Setting the device hostname
 hostname Router5
