--- a/DeviceConfig/Router1.config
+++ b/DeviceConfig/Router1.config
@@ -1,5 +1,5 @@
 !
-! Configuration (c) Elijah Stuenkel, CNNA, 2024
+! Configuration (c) Elijah Stuenkel, CCNA, 2024
 !
 ! Setting the device hostname
 hostname Router1
